# clibuilder

./: .gitignore  .pre-commit-config.yaml  .yamllint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: run_tox.yml
autocli/: __init__.py  autocli.py
clidesc/: __init__.py  clidesc.py
examples/: color.py  from_file.py  from_file.yml  greeting.py  multicommand.py  output.py
features/: attribute_type.feature  basic_usage.feature  color_output.feature  environment.py  exceptions.feature  multiple_commands.feature  output_display.feature
features/steps/: basic_cli.py  behave_shared.py  color_output.py  exception.py
tests/: conftest.py  test_handler_attributes.py
utils/: gittochangelog  release
