[metadata]
name = autocli
version = file: version.txt
author = Rafael Guterres Jeffman
author-email = rafasgj@gmail.com
home-page = https://github.com/rafasgj/autocli
description = An automatic CLI interface framework.
long-description = file: README.md
license = GPLv3
license_files = COPYING
platform = any
keywords = ['CLI', 'Development Tool']
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
project_urls =
    Bug Tracker = https://github.com/rafasgj/autocli/issues
    Changelog = https://github.com/rafasgj/autocli/releases/latest

[options.extras_require]
dev =
    # pre-commit
    black
    yamllint
    flake8
    pylint
    pydocstyle
    behave
    pytest
    coverage
test =
    behave
    pytest
    coverage
lint =
    black
    yamllint
    flake8
    pylint
    pydocstyle


# Tools

[behave]
stop = true
stdout_capture = false
stderr_capture = false
junit = false

[coverage:run]
omit =
    .tox/*
    .venv/*
    /usr/*
    tests/*
    features/*
    */.local/*

[coverage:report]
show_missing = true
skip_covered = true
skip_empty = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D203, D212

[flake8]
max-line-length = 80
doctests = True
max-complexity = 10
extend-ignore = E203, W503
exclude =
    .tox
    .venv
    .git
    .eggs
    __pycache__
    docs
    build
    dist

[pylint]
max-nested-blocks = 5
ignored-modules = behave
max-line-length = 80
load-plugins = pylint.extensions.mccabe
max-complexity = 10

[tox:tox]
envlist = py37, py38
skipsdist = True

[testenv]
commands =
    python3 -m pip install pip --upgrade
    python3 -m pip install -e .[lint]
    black -l 80 --check .
    python3 -m yamllint .
    python3 -m flake8 .
    python3 -m pydocstyle .
    python3 -m pylint autocli features examples setup.py
    python3 -m pip install -e .[test]
    python3 -m pip install -e .
    python3 -m coverage run -m behave
    python3 -m coverage report
