[metadata]
name = clidesc
version = attr: clidesc.__version__
author = Rafael Guterres Jeffman
author-email = rafasgj@gmail.com
home-page = https://github.com/rafasgj/clidesc
url = https://github.com/rafasgj/clidesc
description = An automatic CLI interface framework.
long-description = file: README.md
long-description-content-type = text/markdown
license = GPLv3
license_files = COPYING
platform = any
keywords = ['CLI', 'Development Tool']
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
project_urls =
    Bug Tracker = https://github.com/rafasgj/clidesc/issues
    Changelog = https://github.com/rafasgj/clidesc/releases/latest

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    yamllint
test_require =
    behave
    pytest
    coverage

# [options.package_data]

[options.extras_require]
dev =
    %(test)s
    pre-commit
    setuptools > 50.0
test =
    %(lint)s
    behave
    pytest
    coverage
lint =
    black
    yamllint
    flake8
    pylint
    pydocstyle
release =
    setuptools > 50.0
    twine

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

[sdist]
formats = gztar

# Tools

[behave]
stop = true
stdout_capture = false
stderr_capture = false
junit = false

[coverage:run]
omit =
    .tox/*
    .venv/*
    /usr/*
    tests/*
    features/*
    */.local/*

[coverage:report]
show_missing = true
skip_covered = true
skip_empty = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError
    # raise MemoryError
    # if __name__ == .__main__.:
    # if typing.TYPE_CHECKING:

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D203, D212

[flake8]
max-line-length = 80
doctests = True
max-complexity = 10
extend-ignore = E203, W503
exclude =
    .tox
    .venv
    .git
    .eggs
    __pycache__
    docs
    build
    dist

[pylint]
max-nested-blocks = 5
ignored-modules = behave
max-line-length = 80
load-plugins = pylint.extensions.mccabe
max-complexity = 10

[tox:tox]
envlist = py37, py38, py39
skipsdist = True

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
commands =
    {envpython} -m pip install pip --upgrade
    {envpython} -m pip install -e .[lint]
    black -l 80 --check .
    yamllint .
    flake8 .
    pydocstyle .
    pylint clidesc features examples setup.py
    {envpython} -m pip install -e .[test]
    coverage run -m behave
    coverage run -a -m pytest
    coverage report
